--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -43,6 +43,9 @@ $fullWidth: 100%;
 $pageWrap: 1180px;
 $centerOnPage:  auto;
 
+// BS overrides
+$btn-border-radius: 100px;
+
 
 //POSITIONS
 $relative: relative;
