--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -1,83 +1,4 @@
-//Header section
-@mixin headerHeight {
-  height:75px;
-}
 
-//Resposive design parent declarations
-@mixin flex {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-
-//shorthand flex-direction and flex-wrap
-@mixin flex-flow($values: (row nowrap)) {
-  // No Webkit/FF Box fallback.
-  -webkit-flex-flow: $values;
-  -ms-flex-flow: $values;
-  flex-flow: $values;
-}
-
-/* Align Items - Center */
-@mixin alignItems {
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-//main axis alignment
-@mixin justify-content($value: flex-start) {
-
-  @if $value == flex-start {
-    -webkit-box-pack: start;
-    -moz-box-pack: start;
-    -ms-flex-pack: start;
-  } @else if $value == flex-end {
-    -webkit-box-pack: end;
-    -moz-box-pack: end;
-    -ms-flex-pack: end;
-  } @else if $value == space-between {
-    -webkit-box-pack: justify;
-    -moz-box-pack: justify;
-    -ms-flex-pack: justify;
-  } @else if $value == space-around {
-    -ms-flex-pack: distribute;
-  } @else {
-    -webkit-box-pack: $value;
-    -moz-box-pack: $value;
-    -ms-flex-pack: $value;
-  }
-  -webkit-justify-content: $value;
-  justify-content: $value;
-}
-
-@mixin uniformAlignment {
-  flex: 1 1 0;
-  -webkit-flex: 1 1 0;
-  -ms-flex: 1 1 100px;
-}
-
-@mixin twoOneRatio {
-  flex: 2 1 0;
-  -webkit-flex: 2 1 0;
-  -ms-flex: 2 1 100px;
-}
-
-@mixin threeOneRatio {
-  flex: 2 1 0;
-  -webkit-flex: 2 1 0;
-  -ms-flex: 2 1 100px;
-}
-
-@mixin flexBasis{
-  flex: 0 0 45%;
-  -webkit-flex: 0 0 45%;
-  -ms-flex: 0 0 45%;
-}
 
 .blockDisplay{
   display: block;
@@ -96,4 +17,66 @@ input[type=submit] {
 
 select.big, input.big {
   height: 61px;
+}
+
+.bg-teal{
+    background-color: $teal;
+}
+.bg-blue{
+    background-color: $blue;
+}
+.bg-violet{
+    background-color: $violet;
+}
+.bg-hanblue{
+    background-color: $hanblue;
+}
+.bg-green{
+    background-color: $green;
+}
+.bg-pink{
+    background-color: $pink;
+}
+.bg-black{
+    background-color: $black;
+}
+.bg-grey{
+    background-color: $grey;
+}
+.bg-white{
+    background-color: $white;
+}
+.bg-greylight{
+    background-color: $greylight;
+}
+
+.col-teal{
+    color: $teal;
+}
+.col-blue{
+    color: $blue;
+}
+.col-violet{
+    color: $violet;
+}
+.col-hanblue{
+    color: $hanblue;
+}
+.col-green{
+    color: $green;
+}
+.col-pink{
+    color: $pink;
+}
+.col-black{
+    color: $black;
+}
+.col-grey{
+    color: $grey;
+}
+.col-white{
+    color: $white;
+}
+.col-greylight{
+    color: $greylight;
 }
