--- a/resources/sass/layout/header.scss
+++ b/resources/sass/layout/header.scss
@@ -91,11 +91,11 @@
   line-height: 2 !important;
 
 }
-select, input{
-  width: 300px;
-  height: 30px;
-  border-radius: 7px;
-}
+//select, input{
+//  width: 300px;
+//  height: 30px;
+//  border-radius: 7px;
+//}
 
 
 
