--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -1,117 +1,135 @@
 //BANNER SECTION
-.bannerParent{
-  width: 100%;
-  height: auto;
+.bannerParent {
+    width: 100%;
+    height: auto;
 
 }
 
 .banner {
-  width:$fullWidth;
-  min-height: 621px;
-  background-image:
-          //linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
-          //url('../images/banner.jpg');
-        linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg);
-  margin:$centerOnPage;
-  background-repeat:no-repeat;
-  background-size:cover;
+    width: $fullWidth;
+    min-height: 621px;
+    background-image: url(/images/banner.jpg);
+    margin: $centerOnPage;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: #19a2a1;
+        opacity: 0.85;
+    }
 }
 
 .bannerData {
-  @include flex;
-  width:$pageWrap;
-  margin: auto;
-  padding: 42px 0;
-  color: $white; //inherited value
-
+    @include flex;
+    width: $pageWrap;
+    margin: auto;
+    padding: 42px 0;
+    color: $white; //inherited value
 }
 
 //BANNER CONTENTS
 .homePostCodeParent {
-  @include uniformAlignment;
+    @include uniformAlignment;
 }
 
 .box {
-  width: 511px;
-  min-height: 431px;
-  border-radius: 20px;
-  background-color: #ffffffad;
-  padding: 20px 30px;
-  text-align:center;
+    width: 511px;
+    min-height: 431px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.75);
+    opacity: 0.75;
+    padding: 20px 30px;
+    text-align: center;
+    position: relative;
+    z-index: 5;
 
-  p {
-    color: $black;
-    font-size: 25px;
-    width: 66%;
-    margin: auto;
-    font-weight: 500;
-    letter-spacing: -1.25px;
-  }
+    p {
+        color: $black;
+        font-size: 25px;
+        width: 66%;
+        margin: auto;
+        font-weight: 500;
+        letter-spacing: -1.25px;
+    }
 }
 
 .homePromo {
-  @include uniformAlignment;
-  margin: auto 0;
+    @include uniformAlignment;
+    margin: auto 0;
+    position: relative;
+    z-index: 5;
 
-  p{
-    font-size: 1.5em;
-    //width: 86%;
-  }
+    p {
+        font-size: 1.5em;
+        //width: 86%;
+    }
 }
 
 .promoList {
-  width:80%;
-  li{
-    list-style:none;
-    font-size: 1.4em;
-    line-height: 40px;
-  }
+    width: 80%;
+
+    li {
+        list-style: none;
+        font-size: 1.4em;
+        line-height: 40px;
+    }
 }
 
 .browseButton {
-  text-align:center;
-  font-size: 1.2em;
-  a{
-    color: $darkerGrey;
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: -0.7px;
-    line-height: 19px;
-  }
+    text-align: center;
+    font-size: 1.2em;
+
+    a {
+        color: $darkerGrey;
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: -0.7px;
+        line-height: 19px;
+    }
 
 }
+
 .aquaChevron {
-  color: $aqua;
-  position:$absolute;
-  left: 420px;
-  top: 25px;
+    color: $aqua;
+    position: $absolute;
+    left: 420px;
+    top: 25px;
 }
 
 .postcode-autocomplete-cont {
-  float: left;
-  width: 100%;
-  overflow: hidden;
-  -webkit-transition: 1s linear;
-  -moz-transition: 1s linear;
-  -ms-transition: 1s linear;
-  -o-transition: 1s linear;
-  transition: 1s linear;
-  -webkit-transition-delay: 0s;
-  -moz-transition-delay: 0s;
-  -ms-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  transition-delay: 0s;
-  margin-top: 20px;
-  .ajax-box {
     float: left;
     width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #fff;
-    border: 2px solid #00cecd;
-    max-height: 222px;
-    overflow: auto;
-  }
+    overflow: hidden;
+    -webkit-transition: 1s linear;
+    -moz-transition: 1s linear;
+    -ms-transition: 1s linear;
+    -o-transition: 1s linear;
+    transition: 1s linear;
+    -webkit-transition-delay: 0s;
+    -moz-transition-delay: 0s;
+    -ms-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    transition-delay: 0s;
+    margin-top: 20px;
+
+    .ajax-box {
+        float: left;
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        background-color: #fff;
+        border: 2px solid #00cecd;
+        max-height: 222px;
+        overflow: auto;
+    }
 
 }
 
