--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -1,141 +1,164 @@
 //BUTTONS
-.hospBtn{
-  font-size: 1.125rem;
-  line-height: 1.5;
-  border-radius: 24px;
-  color: $white;
-  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-  width: $fullWidth;
-  text-align: center;
-  margin: auto;
-  padding-top: 10px;
+.hospBtn {
+    font-size: 1.125rem;
+    line-height: 1.5;
+    border-radius: 24px;
+    color: $white;
+    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+    width: $fullWidth;
+    text-align: center;
+    margin: auto;
+    padding-top: 10px;
 }
 
-.blueOval{
-  background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
-  padding: 15px 40px;
+.blueOval {
+    background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
+    padding: 15px 40px;
 }
 
-.greenOvalTop{
-  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-  border-radius: 12px 12px 0 0;
+.greenOvalTop {
+    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+    border-radius: 12px 12px 0 0;
 }
 
-.blueOval:hover{
-  color: $white;
-  text-decoration:none;
-  background: #1b71f3;
-  //background: -webkit-linear-gradient(legacy-direction(90deg), #1b71f3,#1b71f3,#00cecd);
-  background: linear-gradient(90deg, #1b71f3,#1b71f3,#00cecd);
+.blueOval:hover {
+    color: $white;
+    text-decoration: none;
+    background: #1b71f3;
+    //background: -webkit-linear-gradient(legacy-direction(90deg), #1b71f3,#1b71f3,#00cecd);
+    background: linear-gradient(90deg, #1b71f3, #1b71f3, #00cecd);
 }
 
-.greenOval{
-  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-  width: 219px;
-  height: 58px;
-  border-radius: 29px;
-  letter-spacing: -1.1px;
-  line-height: 24px;
-  padding: 15px 40px;
+.greenOval {
+    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+    width: 219px;
+    height: 58px;
+    border-radius: 29px;
+    letter-spacing: -1.1px;
+    line-height: 24px;
+    padding: 15px 40px;
 }
 
 .greenOval:hover, .greenOvalTop:hover {
-  background: #00e09d;
-  //background: -webkit-linear-gradient(legacy-direction(90deg), #00e09d,#00cecd,#00e09d);
-  background: linear-gradient(90deg, #00e09d,#00cecd,#00e09d);
-  color: $white;
-  text-decoration:none;
+    background: #00e09d;
+    //background: -webkit-linear-gradient(legacy-direction(90deg), #00e09d,#00cecd,#00e09d);
+    background: linear-gradient(90deg, #00e09d, #00cecd, #00e09d);
+    color: $white;
+    text-decoration: none;
 }
 
 .submitBtn {
-  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
+    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
 }
 
 .btn {
-  border-radius: 100px;
-  color: $white;
-  font-size: 24px;
-  padding: 14px 26px;
-  background-size: 200%!important;
-  background-position: left!important;
-  @include transition(0.3s);
-  //sizes
-  &.btn-xs {
-    font-size: 16px;
-    padding: 6px 18px;
-  }
-  &.btn-s {
-    font-size: 20px;
-    padding: 8px 22px;
-  }
-  &.btn-m {
+    border-radius: 100px;
+    color: $white;
     font-size: 24px;
-    padding: 10px 26px;
-  }
-  &.btn-l {
-    font-size: 28px;
-    padding: 12px 30px;
-  }
-  &.btn-xl {
-    font-size: 32px;
-    padding: 14px 34px;
-  }
-  //margins
-  &.btn-mg-right {
-    margin-right: 20px;
-  }
-  &.btn-mg-bottom {
-    margin-bottom: 20px;
-  }
-  &.btn-mg-left {
-    margin-left: 20px;
-  }
-  &.btn-mg-top {
-    margin-top: 20px;
-  }
-  //colours
-  &.btn-teal {
-    @include linear-gradient(90deg, $teal, $teal, $green);
-    &.btn-grad {
-      @include linear-gradient(90deg, $teal, $green, $teal);
+    padding: 14px 26px;
+    background-size: 200% !important;
+    background-position: left !important;
+    @include transition(0.3s);
+    //sizes
+    &.btn-xs {
+        font-size: 16px;
+        padding: 6px 18px;
     }
-  }
-  &.btn-blue {
-    @include linear-gradient(90deg, $blue, $blue, $teal);
-    &.btn-grad {
-      @include linear-gradient(90deg, $blue, $teal, $blue);
+
+    &.btn-s {
+        font-size: 20px;
+        padding: 8px 22px;
     }
-  }
-  &.btn-violet {
-    @include linear-gradient(90deg, $violet, $violet, $blue);
-    &.btn-grad {
-      @include linear-gradient(90deg, $violet, $blue, $violet);
+
+    &.btn-m {
+        font-size: 22px;
+        font-weight: 400;
+        padding: 10px 47px;
     }
-  }
-  &.btn-hanblue {
-    @include linear-gradient(90deg, $hanblue, $hanblue, $violet);
-    &.btn-grad {
-      @include linear-gradient(90deg, $hanblue, $violet, $hanblue);
+
+    &.btn-l {
+        font-size: 28px;
+        padding: 12px 30px;
     }
-  }
-  &.btn-green {
-    @include linear-gradient(90deg, $green, $green, $teal);
-    &.btn-grad {
-      @include linear-gradient(90deg, $green, $teal, $green);
+
+    &.btn-xl {
+        font-size: 32px;
+        padding: 14px 34px;
     }
-  }
-  &.btn-pink {
-    @include linear-gradient(90deg, $pink, $pink, $violet);
-    &.btn-grad {
-      @include linear-gradient(90deg, $pink, $violet, $pink);
+
+    //margins
+    &.btn-mg-right {
+        margin-right: 20px;
     }
-  }
-  &.btn-black {
-    @include linear-gradient(90deg, $black, $black, $pink, $pink);
-    background-size: 300%!important;
-  }
-  //gradient button
-  &:hover {
-    background-position: right!important;
-  }
+
+    &.btn-mg-bottom {
+        margin-bottom: 20px;
+    }
+
+    &.btn-mg-left {
+        margin-left: 20px;
+    }
+
+    &.btn-mg-top {
+        margin-top: 20px;
+    }
+
+    //colours
+    &.btn-teal {
+        @include linear-gradient(90deg, $teal, $teal, $green);
+
+        &.btn-grad {
+            @include linear-gradient(90deg, $teal, $green, $teal);
+        }
+    }
+
+    &.btn-blue {
+        @include linear-gradient(90deg, $blue, $blue, $teal);
+
+        &.btn-grad {
+            @include linear-gradient(90deg, $blue, $teal, $blue);
+        }
+    }
+
+    &.btn-violet {
+        @include linear-gradient(90deg, $violet, $violet, $blue);
+
+        &.btn-grad {
+            @include linear-gradient(90deg, $violet, $blue, $violet);
+        }
+    }
+
+    &.btn-hanblue {
+        @include linear-gradient(90deg, $hanblue, $hanblue, $violet);
+
+        &.btn-grad {
+            @include linear-gradient(90deg, $hanblue, $violet, $hanblue);
+        }
+    }
+
+    &.btn-green {
+        @include linear-gradient(90deg, $green, $green, $teal);
+
+        &.btn-grad {
+            @include linear-gradient(90deg, $green, $teal, $green);
+        }
+    }
+
+    &.btn-pink {
+        @include linear-gradient(90deg, $pink, $pink, $violet);
+
+        &.btn-grad {
+            @include linear-gradient(90deg, $pink, $violet, $pink);
+        }
+    }
+
+    &.btn-black {
+        @include linear-gradient(90deg, $black, $black, $pink, $pink);
+        background-size: 300% !important;
+    }
+
+    //gradient button
+    &:hover {
+        background-position: right !important;
+    }
 }
