--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -6,10 +6,10 @@ ul {
   display: block;
 }
 
-.fullLeft {
-  width: 100%;
-  float: left;
-}
+//.fullLeft {
+//  width: 100%;
+//  float: left;
+//}
 
 input[type=submit] {
   padding: 0;
