--- a/resources/sass/components/basic/selectbox.scss
+++ b/resources/sass/components/basic/selectbox.scss
@@ -48,7 +48,7 @@ select::-ms-expand {
     input {
         padding-left: 16px;
     }
-    input {
+    input:not([type="submit"]) {
         width: 100%;
         @include placeholder {
             color: $darkerGrey;
