--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -67,7 +67,9 @@
     z-index: 5;
 
     p {
-        font-size: 1.5em;
+        font-size: 24px;
+        line-height: 32px;
+        letter-spacing: -1.2px;
         //width: 86%;
     }
 }
@@ -77,8 +79,18 @@
 
     li {
         list-style: none;
-        font-size: 1.4em;
+        font-size: 24px;
         line-height: 40px;
+        position: relative;
+        padding-left: 63px;
+
+        &:before {
+            content: url("/images/tick.svg");
+            width: 30px;
+            height: 28px;
+            position: absolute;
+            left: 0;
+        }
     }
 }
 
