Video button positioning

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -41,7 +41,7 @@ $hotpink:  #ed0373;
 
 // Body
 $body-bg: #f8fafc;
-$body-color: $white;
+$body-color: $darkerGrey;
 
 // Full width
 $fullWidth: 100%;
