--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -244,3 +244,24 @@
     -webkit-flex: 0 0 45%;
     -ms-flex: 0 0 45%;
 }
+
+// Absolute centring
+
+@mixin v-c {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+@mixin h-c {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@mixin v-h-c {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
