--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -53,7 +53,7 @@
 
 .btn {
     border-radius: 100px;
-    color: $white;
+    color: $white !important;
     font-size: 24px;
     padding: 14px 26px;
     background-size: 200% !important;
