Placeholder video working

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -39,6 +39,9 @@ $sectionBeige: #ececec;
 $darkBlue: #1b71f3;
 $hotpink:  #ed0373;
 
+// Borders
+$borderVideo: #707070;
+
 // Body
 $body-bg: #f8fafc;
 $body-color: $darkerGrey;
