--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -265,3 +265,17 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+// Fixed aspect ratio
+@mixin aspect-ratio($width, $height) {
+    position: relative;
+    &:before {
+        display: block;
+        content: "";
+        width: 100%;
+        padding-top: ($height / $width) * 100%;
+    }
+    >.content {
+        @include v-h-c;
+    }
+}
