--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -39,10 +39,13 @@
 
             .videoParent {
                 position: relative;
+                @include aspect-ratio(497px, 349px);
+                border: 1px solid $borderVideo;
+                border-radius: 15px;
+                overflow: hidden;
 
                 video {
-                    border: 1px solid #707070;
-                    border-radius: 15px;
+                    width: 100%;
                 }
 
                 .playerButton {
@@ -52,11 +55,13 @@
                     height: 78px;
                     width: 78px;
                     z-index: 5;
+                    cursor: pointer;
                 }
             }
         }
 
-        .chooseText, .chooseVideo {
+        .chooseText,
+        .chooseVideo {
             @include uniformAlignment;
         }
     }
