--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -45,7 +45,7 @@
                 overflow: hidden;
 
                 video {
-                    width: 100%;
+                    width: 140%;
                 }
 
                 .playerButton {
@@ -56,6 +56,11 @@
                     width: 78px;
                     z-index: 5;
                     cursor: pointer;
+                    transition: $transition;
+
+                    &:hover {
+                        opacity: 0.8;
+                    }
                 }
             }
         }
