--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -51,6 +51,7 @@
     background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
 }
 
+// New set of styles based on RC UI kit
 .btn {
     border-radius: 100px;
     color: $white !important;
