--- a/resources/sass/components/basic/textbox.scss
+++ b/resources/sass/components/basic/textbox.scss
@@ -1,4 +1,8 @@
-input, button, select, optgroup, textarea {
+input,
+button,
+select,
+optgroup,
+textarea {
   margin: 0;
   margin-bottom: 0px;
   margin-left: 0px;
@@ -7,7 +11,7 @@ input, button, select, optgroup, textarea {
   line-height: inherit;
 }
 
-input {
-  border: 2px solid #ebebeb;
-  padding-left:5px;
-}
+//input:not([type="range"]) {
+//  border: 2px solid #ebebeb;
+//  padding-left:5px;
+//}
