--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -1,235 +1,250 @@
-.filterParent{
-  width: $fullWidth;
-  background-color: $white;
-  padding-top: 50px;
-  padding-bottom: 50px;
+.filterParent {
+    width: $fullWidth;
+    background-color: $white;
+    padding: 23px 0;
 }
 
-.filter{
-  width: $pageWrap;
-  margin: $centerOnPage;
-  height: 187px;
+.filter {
+    width: $pageWrap;
+    margin: $centerOnPage;
 }
 
-.postProx, .selectProx{
-  @include flex;
-
+.postProx,
+.selectProx {
+    @include flex;
 }
 
-.postProxChild{
-  @include uniformAlignment;
-  position: $relative;
-  margin-bottom: 20px;
-}
-
-.searchPageSelect{
-  width: 90%;
-  margin-left: 0 !important;
-  padding: 0 15px 0 10px;
-}
-
-.inputClass{
-  margin-left: 0 !important;
-}
-
-.blackChevron{
-  color: $black;
-  left: -24px;
-}
-
-.resultsLabel{
-  padding-bottom: 10px;
-  left:0 !important;
-}
-
-.sortParent{
-  width: $fullWidth;
-  background-color: $lightergrey;
-
-}
-
-.sort{
-  width: $pageWrap;
-  margin: $centerOnPage;
-}
-
-.sortBar{
-  height: 50px;
-  @include flex;
-}
-.showSection{
-  flex: 0 0 75%;
-  -webkit-flex: 0 0 75%;
-  -ms-flex: 0 0 75%;
-}
-
-.sortSection{
-  flex: 0 0 25%;
-  -webkit-flex: 0 0 25%;
-  -ms-flex: 0 0 25%;
-}
-.showSection, .sortSection{
-  margin: auto;
-}
-
-.sortPageSelect, .sortBy{
-  width: 200px;
-}
-
-.sortLabel{
-  left: 0 !important;
-  top: -10px !important;
-}
-
-.sortBy{
-  top: -10px !important;
-  position: relative;
-}
-
-.sortCategoriesParent{
-  background: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93));
-
-}
-
-.sortCategoriesHeader, .sortCategories{
-  width: $pageWrap;
-  margin: $centerOnPage;
-  @include flex;
-  margin-bottom: 10px;
-}
-.sortCategoriesHeader{
-  height: 80px;
-}
-
-.sortCatSection1{
-  flex: 0 0 20%;
-  -webkit-flex: 0 0 20%;
-  -ms-flex: 0 0 20%;
-
-}
-
-.sortCatSection2{
-  flex: 0 0 70%;
-  -webkit-flex: 0 0 70%;
-  -ms-flex: 0 0 70%;
-
-}
-
-.sortCatSection3{
-  flex: 0 0 10%;
-  -webkit-flex: 0 0 10%;
-  -ms-flex: 0 0 10%;
-}
-
-
-.sortCatMenu{
-  @include flex;
-  margin-top: 30px;
-  li{
-    list-style:none;
-    padding-left: 20px;
+.postProxChild {
     @include uniformAlignment;
-    a{
-      color: $white;
+    position: $relative;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
 
+    #input_postcode {
+        width: 100%;
+        padding: 20px 0 18px 16px;
+
+        @include placeholder {
+            font-size: 18px;
+            //text-transform: uppercase;
+        }
     }
-  }
 }
 
-.sortCategoriesResults{
-  background: $white;
-  margin-top: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+.searchPageSelect {
+    width: 90%;
+    margin-left: 0 !important;
+    padding: 0 15px 0 10px;
 }
 
-.sortCatSection1, .sortCatSection2{
-  @include flex;
+.inputClass {
+    margin-left: 0 !important;
 }
 
-.sortCatSection2Child{
-  @include uniformAlignment;
-  text-align: center;
-  font-weight: 600;
-  padding-left: 20px;
+.blackChevron {
+    color: $black;
+    left: -24px;
 }
 
-.sortCatItem{
-  padding-right: 5%;
-  position:$relative;
+.resultsLabel {
+    padding-bottom: 10px;
+    left: 0 !important;
 }
 
-.sortItemTitle, .sortItemLocation{
-  font-size: .9em;
-  line-height: 15px;
-  width: 120px;
-}
-
-.findLink{
-  position:relative;
-  font-size: .9em;
-  top: -20px;
-}
-
-.NHSHospital, .privateHospital{
-  position:$absolute;
-  top:0;
-  width: 60px;
-  height: 60px;
-  transform: rotate(180deg);
-}
-
-.NHSHospital{
-
-  border-bottom: solid 30px $darkBlue;
-  border-right: solid 30px $darkBlue;
-  border-left: solid 30px transparent;
-  border-top: solid 30px transparent;
+.sortParent {
+    width: $fullWidth;
+    background-color: $lightergrey;
 
 }
 
-.privateHospital{
-  border-bottom: solid 30px $hotpink;
-  border-right: solid 30px $hotpink;
-  border-left: solid 30px transparent;
-  border-top: solid 30px transparent;
+.sort {
+    width: $pageWrap;
+    margin: $centerOnPage;
 }
 
-.NHSHospital, .privateHospital{
-  p {
-    transform: rotate(130deg);
+.sortBar {
+    height: 50px;
+    @include flex;
+}
+
+.showSection {
+    flex: 0 0 75%;
+    -webkit-flex: 0 0 75%;
+    -ms-flex: 0 0 75%;
+}
+
+.sortSection {
+    flex: 0 0 25%;
+    -webkit-flex: 0 0 25%;
+    -ms-flex: 0 0 25%;
+}
+
+.showSection, .sortSection {
+    margin: auto;
+}
+
+.sortPageSelect, .sortBy {
+    width: 200px;
+}
+
+.sortLabel {
+    left: 0 !important;
+    top: -10px !important;
+}
+
+.sortBy {
+    top: -10px !important;
     position: relative;
-    color: #ffffff;
-    left: 20px;
-    top: -12px;
-    font-size: .6em;
-    line-height: 13px;
-  }
 }
 
-.enquiry, .compare{
-  border-radius: 7px !important;
-  width: 159px !important;
-  height: 44px !important;
-  font-size: .8em !important;
-  padding: 0 !important;
+.sortCategoriesParent {
+    background: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93));
 
 }
 
-.enquiry{
-  padding-top: 12px !important;
+.sortCategoriesHeader, .sortCategories {
+    width: $pageWrap;
+    margin: $centerOnPage;
+    @include flex;
+    margin-bottom: 10px;
+}
+
+.sortCategoriesHeader {
+    height: 80px;
+}
+
+.sortCatSection1 {
+    flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    -ms-flex: 0 0 20%;
 
 }
 
-.compare{
-  border-radius: 23px !important;
-  border: 2px solid #00cecd;
-  background: rgba(27, 112, 243, 0) !important;
-  color: $aqua !important;
-  padding-top: 7px !important;
+.sortCatSection2 {
+    flex: 0 0 70%;
+    -webkit-flex: 0 0 70%;
+    -ms-flex: 0 0 70%;
+
 }
 
-.fa-heart{
-  padding-left: 2px;
+.sortCatSection3 {
+    flex: 0 0 10%;
+    -webkit-flex: 0 0 10%;
+    -ms-flex: 0 0 10%;
+}
+
+
+.sortCatMenu {
+    @include flex;
+    margin-top: 30px;
+
+    li {
+        list-style: none;
+        padding-left: 20px;
+        @include uniformAlignment;
+
+        a {
+            color: $white;
+
+        }
+    }
+}
+
+.sortCategoriesResults {
+    background: $white;
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.sortCatSection1, .sortCatSection2 {
+    @include flex;
+}
+
+.sortCatSection2Child {
+    @include uniformAlignment;
+    text-align: center;
+    font-weight: 600;
+    padding-left: 20px;
+}
+
+.sortCatItem {
+    padding-right: 5%;
+    position: $relative;
+}
+
+.sortItemTitle, .sortItemLocation {
+    font-size: .9em;
+    line-height: 15px;
+    width: 120px;
+}
+
+.findLink {
+    position: relative;
+    font-size: .9em;
+    top: -20px;
+}
+
+.NHSHospital, .privateHospital {
+    position: $absolute;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: rotate(180deg);
+}
+
+.NHSHospital {
+
+    border-bottom: solid 30px $darkBlue;
+    border-right: solid 30px $darkBlue;
+    border-left: solid 30px transparent;
+    border-top: solid 30px transparent;
+
+}
+
+.privateHospital {
+    border-bottom: solid 30px $hotpink;
+    border-right: solid 30px $hotpink;
+    border-left: solid 30px transparent;
+    border-top: solid 30px transparent;
+}
+
+.NHSHospital, .privateHospital {
+    p {
+        transform: rotate(130deg);
+        position: relative;
+        color: #ffffff;
+        left: 20px;
+        top: -12px;
+        font-size: .6em;
+        line-height: 13px;
+    }
+}
+
+.enquiry, .compare {
+    border-radius: 7px !important;
+    width: 159px !important;
+    height: 44px !important;
+    font-size: .8em !important;
+    padding: 0 !important;
+
+}
+
+.enquiry {
+    padding-top: 12px !important;
+
+}
+
+.compare {
+    border-radius: 23px !important;
+    border: 2px solid #00cecd;
+    background: rgba(27, 112, 243, 0) !important;
+    color: $aqua !important;
+    padding-top: 7px !important;
+}
+
+.fa-heart {
+    padding-left: 2px;
 }
 
