Added `Compare functionality` to work with Cookies ( json string for data )

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,7 @@
 @import 'components/healthchoice';
 @import 'components/logo';
 @import 'components/pagination';
+@import 'components/compareHospitals';
 
 
 //BASIC COMPONENTS
