Results page filter labels added.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -38,6 +38,7 @@ $footerGrey: #363636;
 $sectionBeige: #ececec;
 $darkBlue: #1b71f3;
 $hotpink:  #ed0373;
+$caretBlack: #040202;
 
 // Borders
 $borderVideo: #707070;
