--- a/resources/sass/components/basic/lightbox.scss
+++ b/resources/sass/components/basic/lightbox.scss
@@ -1,42 +1,44 @@
-.lightbox{
-  width: 200px;
-  height: 70px;
-  background: $white;
-  position: absolute;
-  top: -70px;
-  border-radius: 20px;
-  display: none;
-  z-index: 99;
-  border: 5px solid $black;
-  color: #000;
-  padding: 8px;
+.lightbox {
+    width: 200px;
+    height: 70px;
+    background: $white;
+    position: absolute;
+    top: -70px;
+    border-radius: 20px;
+    display: none;
+    z-index: 99;
+    border: 5px solid $black;
+    color: #000;
+    padding: 8px;
 }
 
-.lightboxAdjust{
-  left: 120px !important;
+.lightboxAdjust {
+    left: 120px !important;
 }
 
-.lightbox:after, .lightbox:before {
-  top: 100%;
-  left: 50%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
+.lightbox:after,
+.lightbox:before {
+    top: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
 }
 
 .lightbox:after {
-  border-color: rgba(136, 183, 213, 0);
-  border-top-color: #fff;
-  border-width: 10px;
-  margin-left: -10px;
+    border-color: rgba(136, 183, 213, 0);
+    border-top-color: #fff;
+    border-width: 10px;
+    margin-left: -10px;
 }
+
 .lightbox:before {
-  border-color: rgba(255, 255, 255, 0);
-  border-top-color: $black;
-  border-width: 16px;
-  margin-left: -16px;
+    border-color: rgba(255, 255, 255, 0);
+    border-top-color: $black;
+    border-width: 16px;
+    margin-left: -16px;
 }
 
