--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -11,38 +11,6 @@
         &:first-child {
             margin-left: -20px;
         }
-
-        .selectParent {
-            position: relative;
-            width: 100%;
-
-            label {
-                color: #1c1c1c;
-                font-size: 14px;
-                font-weight: 500;
-                letter-spacing: -0.7px;
-                line-height: 18px;
-                margin-bottom: 6px;
-            }
-
-            select {
-                padding: 12px 70px 9px 13px;
-                /* Style for "Knee Opera" */
-                color: #1c1c1c;
-                font-size: 12px;
-                font-weight: 500;
-                letter-spacing: -0.6px;
-                line-height: 15px;
-            }
-
-            i.blackChevron {
-                position: absolute;
-                right: 14px;
-                bottom: 13px;
-                color: $caretBlack;
-                pointer-events: none;
-            }
-        }
     }
 }
 
@@ -53,7 +21,42 @@
 
     .postProxChild {
         justify-content: flex-end;
+        align-items: flex-end;
     }
+}
+
+// Shared style for selects on results page
+
+.selectParent {
+    position: relative;
+    width: 100%;
+
+    label {
+        color: #1c1c1c;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: -0.7px;
+        line-height: 18px;
+        margin-bottom: 6px;
+    }
+
+    i.blackChevron {
+        position: absolute;
+        right: 14px;
+        bottom: 13px;
+        color: $caretBlack;
+        pointer-events: none;
+    }
+}
+
+.searchPageSelect {
+    padding: 10px 40px 10px 13px;
+    /* Style for "Knee Opera" */
+    color: #1c1c1c;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: -0.6px;
+    line-height: 15px;
 }
 
 .filterParent {
@@ -106,23 +109,26 @@
 
 .sortBar {
     @include flex;
+    justify-content: space-between;
+
+    .showSection {
+        margin: auto auto auto 0;
+    }
+
+    .sortSection {
+        margin: 10px 0;
+
+        .searchPageSelect {
+            width: auto
+        }
+    }
+
+    .showSection,
+    .sortSection {
+        //margin: auto;
+    }
 }
 
-.showSection {
-    flex: 0 0 75%;
-    -webkit-flex: 0 0 75%;
-    -ms-flex: 0 0 75%;
-}
-
-.sortSection {
-    flex: 0 0 25%;
-    -webkit-flex: 0 0 25%;
-    -ms-flex: 0 0 25%;
-}
-
-.showSection, .sortSection {
-    margin: auto;
-}
 
 .sortPageSelect, .sortBy {
     width: 200px;
@@ -163,15 +169,10 @@
 
 .sortCatSection2 {
     flex: 0 0 70%;
-    -webkit-flex: 0 0 70%;
-    -ms-flex: 0 0 70%;
-
 }
 
 .sortCatSection3 {
     flex: 0 0 10%;
-    -webkit-flex: 0 0 10%;
-    -ms-flex: 0 0 10%;
 }
 
 
