--- a/resources/sass/components/compareHospitals.scss
+++ b/resources/sass/components/compareHospitals.scss
@@ -43,7 +43,7 @@
             }
             .item-col {
                 float: left;
-                width: 340px;
+                //width: 340px;
                 padding: 40px 40px 0 0;
             }
         }
