--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -29,8 +29,8 @@ $darkerWhite:#f5f5f5;
 $darkestWhite: #ebebeb;
 $aqua:#00cecd;
 $darkerAqua: #00b5b4;
-$lightgrey: #ebebeb;
-$lightergrey: #ececec;
+$lightGrey: #ebebeb;
+$lighterGrey: #ececec;
 $lighestGrey:#1b1b1b;
 $darkerGrey:#1c1c1c;
 $sunnyYellow: #fff568;
