--- a/resources/sass/components/basic/helplink.scss
+++ b/resources/sass/components/basic/helplink.scss
@@ -5,7 +5,7 @@
   top: 0;
   right: 18px;
   border-radius: 50%;
-  background: $lightgrey;
+  background: $lightGrey;
   width: 20px;
   height: 20px;
   text-align: center;
