- Fixed the button 'remove' from the Comparison content; - Toggle the content when the header is clicked - Toggle the heart full / empty when the hospital is added to the comparison

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,7 +26,7 @@
 @import 'components/healthchoice';
 @import 'components/logo';
 @import 'components/pagination';
-@import 'components/compareHospitals';
+@import 'components/compare';
 
 //BASIC COMPONENTS
 @import 'components/banner';
