--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Font-awesome
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+
 //MISC
 @import 'typography';
 
