--- a/resources/sass/components/basic/selectbox.scss
+++ b/resources/sass/components/basic/selectbox.scss
@@ -42,7 +42,7 @@ select::-ms-expand {
 .box {
     select,
     input {
-        padding-left: 16px;
+        //padding-left: 16px;
     }
 
     input:not([type="submit"]) {
@@ -53,3 +53,42 @@ select::-ms-expand {
     }
 }
 
+// Half width selects on homepage
+
+.select_half-width {
+    justify-content: space-between;
+
+    label {
+        text-align: left;
+        @include font-standard;
+    }
+    select {
+        flex: 0 0 50%;
+        padding: 12px 100px 12px 16px;
+        @include font-standard;
+    }
+
+    &:after {
+        content: '\f078';
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 45px;
+        height: 45px;
+        line-height: 45px;
+        border-radius: 0 10px 10px 0;
+        border: 2px solid #ebebeb;
+        background-color: #ebebeb;
+        pointer-events: none;
+    }
+
+    + .helpParent {
+        .helpLink {
+            right: 240px;
+            top: 10px;
+        }
+    }
+}
