--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -17,8 +17,13 @@ input[type=submit] {
   background: none;
 }
 
-select.big, input.big {
-  height: 61px;
+select.big,
+input.big {
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: -0.9px;
+    line-height: 19px;
+    padding: 20px 45px 20px 16px;
 }
 
 .bg-teal{
