--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -51,6 +51,7 @@
 
 .searchPageSelect {
     padding: 10px 40px 10px 13px;
+    background-color: $white;
     /* Style for "Knee Opera" */
     color: #1c1c1c;
     font-size: 12px;
