--- a/resources/sass/components/basic/selectbox.scss
+++ b/resources/sass/components/basic/selectbox.scss
@@ -5,6 +5,11 @@
     select {
         width: 100%;
     }
+
+    label {
+        color: #1c1c1c;
+        font-weight: 500;
+    }
 }
 
 .flexSelect {
